--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>junit</groupId>
@@ -64,8 +65,8 @@
         <connection>scm:git:git://github.com/junit-team/junit4.git</connection>
         <developerConnection>scm:git:git@github.com:junit-team/junit4.git</developerConnection>
         <url>https://github.com/junit-team/junit4</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
     <issueManagement>
         <system>github</system>
         <url>https://github.com/junit-team/junit4/issues</url>
@@ -97,7 +98,7 @@
         <surefireVersion>2.19.1</surefireVersion>
         <hamcrestVersion>1.3</hamcrestVersion>
         <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
-        <arguments />
+        <arguments/>
         <gpg.keyname>67893CC4</gpg.keyname>
     </properties>
 
@@ -354,7 +355,7 @@
                         </manifest>
                         <manifestEntries>
                             <Automatic-Module-Name>junit</Automatic-Module-Name>
-                        </manifestEntries>                        
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
@@ -374,11 +375,11 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.7</version>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-pmd-plugin</artifactId>-->
-<!--                <version>3.13.0</version>-->
-<!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-pmd-plugin</artifactId>-->
+            <!--                <version>3.13.0</version>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 
@@ -494,6 +495,34 @@
                             </formats>
                         </configuration>
                     </plugin>
+
+                    <plugin>
+                        <groupid>org.jacoco</groupid>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.7.9</version>
+                        <executions>
+                            <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>post-unit-te3st</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -596,23 +625,23 @@
                             <source>1.6</source>
                         </configuration>
                     </plugin>
-<!--                    <plugin>-->
-<!--                        <groupId>org.apache.maven.plugins</groupId>-->
-<!--                        <artifactId>maven-pmd-plugin</artifactId>-->
-<!--                        <version>3.13.0</version>-->
-<!--                    </plugin>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.apache.maven.plugins</groupId>-->
-<!--                        <artifactId>maven-checkstyle-plugin</artifactId>-->
-<!--                        <version>3.1.1</version>-->
-<!--                        <reportSets>-->
-<!--                            <reportSet>-->
-<!--                                <reports>-->
-<!--                                    <report>checkstyle</report>-->
-<!--                                </reports>-->
-<!--                            </reportSet>-->
-<!--                        </reportSets>-->
-<!--                    </plugin>-->
+                    <!--                    <plugin>-->
+                    <!--                        <groupId>org.apache.maven.plugins</groupId>-->
+                    <!--                        <artifactId>maven-pmd-plugin</artifactId>-->
+                    <!--                        <version>3.13.0</version>-->
+                    <!--                    </plugin>-->
+                    <!--                    <plugin>-->
+                    <!--                        <groupId>org.apache.maven.plugins</groupId>-->
+                    <!--                        <artifactId>maven-checkstyle-plugin</artifactId>-->
+                    <!--                        <version>3.1.1</version>-->
+                    <!--                        <reportSets>-->
+                    <!--                            <reportSet>-->
+                    <!--                                <reports>-->
+                    <!--                                    <report>checkstyle</report>-->
+                    <!--                                </reports>-->
+                    <!--                            </reportSet>-->
+                    <!--                        </reportSets>-->
+                    <!--                    </plugin>-->
 
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -623,10 +652,8 @@
             </reporting>
 
 
-
         </profile>
     </profiles>
-
 
 
 </project>
