--- a/pom.xml
+++ b/pom.xml
@@ -497,7 +497,7 @@
                     </plugin>
 
                     <plugin>
-                        <groupid>org.jacoco</groupid>
+                        <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>0.7.9</version>
                         <executions>
