fix : add report for cobertura

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
             <organization>JUnit</organization>
             <email>team@junit.org</email>
             <url>https://github.com/junit-team/junit4/graphs/contributors</url>
+            <url>https://github.com/junit-team/junit4/graphs/contributors</url>
             <roles>
                 <role>developers</role>
             </roles>
@@ -485,16 +486,16 @@
                         </executions>
                     </plugin>
 
-<!--                    <plugin>-->
-<!--                        <groupId>org.codehaus.mojo</groupId>-->
-<!--                        <artifactId>cobertura-maven-plugin</artifactId>-->
-<!--                        <version>2.7</version>-->
-<!--                        <configuration>-->
-<!--                            <formats>-->
-<!--                                <format>xml</format>-->
-<!--                            </formats>-->
-<!--                        </configuration>-->
-<!--                    </plugin>-->
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>cobertura-maven-plugin</artifactId>
+                        <version>2.7</version>
+                        <configuration>
+                            <formats>
+                                <format>xml</format>
+                            </formats>
+                        </configuration>
+                    </plugin>
 
                     <plugin>
                         <groupId>org.jacoco</groupId>
@@ -652,11 +653,14 @@
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>cobertura-maven-plugin</artifactId>
                         <version>2.7</version>
-                        <configuration>
-                            <formats>
-                                <format>xml</format>
-                            </formats>
-                        </configuration>
+                        <reportSets>
+                            <reportSet>
+                                <reports>
+                                    <report>cobertura</report>
+                                </reports>
+                            </reportSet>
+                        </reportSets>
+
                     </plugin>
                 </plugins>
 
